--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -1,12 +1,3 @@
-@phdthesis{Paramteric_L-Systems,
- author = {Hanan, James Scott},
- advisor = {Prusinkiewicz, Przemyslaw},
- title = {Parametric L-systems and Their Application to the Modelling and Visualization of Plants},
- year = {1992},
- isbn = {0-315-83871-X},
- note = {AAINN83871},
- publisher = {The University of Regina (Canada)},
-} 
 
 @online{NoMansSky,
  title = {No Man's Sky},
@@ -80,39 +71,40 @@
  type = {Masterarbeit}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Procedural Generation and PCA %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
+% Formal Grammar %
+%%%%%%%%%%%%%%%%%%
 
-@book{PCA,
- author = {Jolliffe, I.T.},
- year = {2002},
- title = {Principal Component Analysis},
- edition = {2},
- publisher = {Springer-Verlag},
- address = {New York},
- isbn = {0-387-95442-2}
+@phdthesis{Paramteric_L-Systems,
+ author = {Hanan, James Scott},
+ advisor = {Prusinkiewicz, Przemyslaw},
+ title = {Parametric L-systems and Their Application to the Modelling and Visualization of Plants},
+ year = {1992},
+ isbn = {0-315-83871-X},
+ note = {AAINN83871},
+ publisher = {The University of Regina (Canada)},
+} 
+
+@thesis{cityGeneration,
+ title = {Prozedurale Städtegenerierung mit Hilfe von L-Systemen},
+ author = {Petratsch, Martin},
+ school = {Technische Universität Dresden},
+ year = {2008},
+ type = {Großer Beleg},
+ url = {http://www.inf.tu-dresden.de/index.php?node_id=2234&ln=de}
 }
 
-@article{PCA_faces,
- author = {Blanz, Volker and Vetter, Thomas},
- year = {2002},
- month = {09},
- pages = {},
- title = {A Morphable Model for the Synthesis of 3D Faces},
- journal = {SIGGRAPH'99 Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
- url = {https://dl.acm.org/doi/10.1145/311535.311556}
+@misc{tgiScript,
+ title = {Theoretische Grundlagen der Informatik},
+ year = {Wintersemester 2013/2014},
+ author = {Müller-Quade, Prof. Dr. Jörn and Achenbach, Dirk and Mechler, Jeremias and Nilges, Tobias},
+ school = {Karlsruher Institut für Technologie},
+ url = {https://crypto.iti.kit.edu/fileadmin/User/TGI_WS13/Skript_Beth.pdf}
 }
 
-@inproceedings{PCA_bodies,
- author = {Seo, Hyewon and Thalmann, Nadia},
- year = {2003},
- month = {01},
- pages = {19-26},
- title = {An Automatic modeling of human bodies from sizing parameters},
- journal = {Proceedings of the Symposium on Interactive 3D Graphics},
- url = {https://dl.acm.org/doi/10.1145/641480.641487}
-}
+%%%%%%%%%%%%%%%%%%%%%%%%%
+% Procedural Generation %
+%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @thesis{ProceduralCharacterGeneration,
  author = {Krogh, Robert},
@@ -122,14 +114,6 @@
  year = {2007},
  type = {Masterarbeit},
  url = {https://projekter.aau.dk/projekter/en/studentthesis/procedural-character-generation-implementing-reference-fitting-and-principal-components-analysis(8a268f9e-a382-496b-8a94-a94fe6606d2e).html}
-}
-
-@thesis{GeneratingFacialTextures,
- author = {Bach, Esben and Madsen, Andreas},
- title = {Building and Generating Facial Textures using Eigen Faces},
- school = {Harbin Institute of Technology und Linköping University},
- year = {2016},
- type = {Masterarbeit}
 }
 
 @inproceedings{PCGSurvey_videoGames,
@@ -163,6 +147,50 @@
  url = {https://www.demoscene.info/},
  urldate = {2020-05-06}
 }
+
+
+%%%%%%%
+% PCA %
+%%%%%%%
+
+@book{PCA,
+ author = {Jolliffe, I.T.},
+ year = {2002},
+ title = {Principal Component Analysis},
+ edition = {2},
+ publisher = {Springer-Verlag},
+ address = {New York},
+ isbn = {0-387-95442-2}
+}
+
+@article{PCA_faces,
+ author = {Blanz, Volker and Vetter, Thomas},
+ year = {2002},
+ month = {09},
+ pages = {},
+ title = {A Morphable Model for the Synthesis of 3D Faces},
+ journal = {SIGGRAPH'99 Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
+ url = {https://dl.acm.org/doi/10.1145/311535.311556}
+}
+
+@inproceedings{PCA_bodies,
+ author = {Seo, Hyewon and Thalmann, Nadia},
+ year = {2003},
+ month = {01},
+ pages = {19-26},
+ title = {An Automatic modeling of human bodies from sizing parameters},
+ journal = {Proceedings of the Symposium on Interactive 3D Graphics},
+ url = {https://dl.acm.org/doi/10.1145/641480.641487}
+}
+
+@thesis{GeneratingFacialTextures,
+ author = {Bach, Esben and Madsen, Andreas},
+ title = {Building and Generating Facial Textures using Eigen Faces},
+ school = {Harbin Institute of Technology und Linköping University},
+ year = {2016},
+ type = {Masterarbeit}
+}
+
 
 %%%%%%%%%%%%
 % Biologie %
