--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -102,6 +102,16 @@
  url = {https://crypto.iti.kit.edu/fileadmin/User/TGI_WS13/Skript_Beth.pdf}
 }
 
+@book{FormalLanguageTheory,
+  title={Introduction to Formal Language Theory},
+  author={Harrison, Michael A.},
+  isbn={0-201-02955-3},
+  series={Addison-Wesley series in computer science},
+  year={1978},
+  publisher={Addison-Wesley Publishing Company},
+  school = {University of California}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%
 % Procedural Generation %
 %%%%%%%%%%%%%%%%%%%%%%%%%
