--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -144,9 +144,8 @@
 \include{biology}
 \include{basics}
 \include{previous_work}
-\include{first_approaches_and_problems}
 \include{pca}
-\include{generation_of_non_pca_things}
+\include{skeleton_generation}
 \include{additional_features}
 \include{implementation_detail}
 \include{future_work}
