--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -60,9 +60,9 @@ Eine Teilmenge der Grammatiken bilden \emph{kontextsensitive} Grammatiken. Ihre 
 Wiederum eine Teilmenge davon bilden \emph{kontextfreie} Grammatiken mit Produktionen der Form 
 \[A \rightarrow w \text{ mit } A \in V \text{ und } w \in (\Sigma \cup V)^*.\] \cite[Abschnitte 1.4 und 1.5]{FormalLanguageTheory}
 
-\emph{L-Systeme} oder Lindenmayer-Systeme sind spezielle Grammatiken. Sie wurden 1968 von dem Biologen Aristid Lindenmayer vorgestellt, mit dem Zweck das Wachstum vielzelliger Lebewesen zu modellieren. Im Unterschied zu Grammatiken, bei denen Produktionen einzeln nacheinander angewendet werden, werden bei L-Systemen so viele Produktionen wie möglich gleichzeitig angewendet. Dies soll modellieren, dass viele Zellteilungen zur gleichen Zeit stattfinden können.
-Es gibt auch hier wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme.\\
-Oft werden L-Systeme verwendet um das Wachstum von Pflanzen zu modellieren. Es gibt aber auch andere Anwendungsbeispiele, wie \zb die Generierung von Städten \cite{cityGeneration}. \cite{Paramteric_L-Systems}
+\emph{L-Systeme} oder Lindenmayer-Systeme sind spezielle Grammatiken. Sie wurden 1968 von dem Biologen Aristid Lindenmayer vorgestellt, mit dem Zweck das Wachstum vielzelliger Lebewesen zu modellieren. Im Unterschied zu Grammatiken, bei denen Produktionen einzeln nacheinander angewendet werden, werden bei L-Systemen alle Symbole gleichzeitig ersetzt. Dies soll modellieren, dass viele Zellteilungen zur gleichen Zeit stattfinden können.\\
+Es gibt auch hier wieder verschiedene Teilmengen wie \zb kontextfreie und kontextsensitive L-Systeme. Um Verzweigungen zu modellieren, wurden zusätzlich Klammerstrukturen eingeführt. Das Teilwort innerhalb einer Klammer repräsentiert einen "`Ast"', der wiederum in sich verzweigt sein kann.\\
+Oft werden L-Systeme verwendet um das Wachstum von Pflanzen zu modellieren. Es gibt aber auch andere Anwendungsbeispiele, wie \zb die Generierung von Städten \cite{cityGeneration}. \cite[Kapitel 1]{AlgorithmicBeautyOfPlants}
 
 
 
