--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -75,6 +75,18 @@
 % Formal Grammar %
 %%%%%%%%%%%%%%%%%%
 
+@book{AlgorithmicBeautyOfPlants,
+ author = {Prusinkiewicz, Przemyslaw and Lindenmayer, Aristid},
+ title = {The Algorithmic Beauty of Plants},
+ year = {1990},
+ isbn = {0-387-97297-8},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ url = {http://algorithmicbotany.org/papers/#abop}
+}
+  
+
+
 @phdthesis{Paramteric_L-Systems,
  author = {Hanan, James Scott},
  advisor = {Prusinkiewicz, Przemyslaw},
