Section on generation rules

--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -45,6 +45,7 @@ Es gibt viele verschiedene Methoden Probleme aus der inversen Kinematik zu löse
 
 %--------------------
 \section{Grammatiken}
+\label{grammars}
 
 Eine \emph{Grammatik} ist ein Tupel $G = (\Sigma, V, S, P)$ mit 
 \begin{itemize}
