--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -5,6 +5,7 @@
 
 %---------------------------
 \section{Programmiersprache}
+\label{programming_language}
 
 \begin{itemize}
  \item Rust: nicht geeignet, da Datenstrukturen die zyklische Referenzen auf veränderbare Objekte verwenden nicht oder nur kompliziert umsetzbar sind.
